<resources>
    <string name="app_name">EmployeeTracker</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="apogi">Welcome to your Apogee Digital</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">or</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>

</resources>