<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".View.LoginActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="273dp"
                android:background="@drawable/blue_bg">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="93dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/apogeelogo" />

            </FrameLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="62dp"
                android:layout_marginTop="36.7dp"
                android:layout_marginRight="62dp"
                android:background="@drawable/blue_border_rounded_cornwe">

                <!-- INPUT -->
                <EditText
                    android:id="@+id/user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/username_icon"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingStart="17dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@{login.email}"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="12sp" />
                <!-- ICON -->

                <ImageView
                    android:id="@+id/username_icon"
                    android:layout_width="14.7dp"
                    android:layout_height="10.3dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="17dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/email" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="62dp"
                android:layout_marginTop="12.7dp"
                android:layout_marginRight="62dp"
                android:background="@drawable/blue_border_rounded_cornwe">

                <!-- INPUT -->
                <EditText
                    android:id="@+id/user_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/icon"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:paddingStart="17dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@{login.password}"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="12sp" />

                <!-- ICON -->
                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="14.7dp"
                    android:layout_height="10.3dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="17dp"
                    android:src="@drawable/password" />

            </RelativeLayout>


            <TextView
                android:id="@+id/user_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="62dp"
                android:layout_marginTop="18.7dp"
                android:layout_marginRight="62dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/blue_fill__rounded_color"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textSize="15sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13.7dp"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center_horizontal"
                    android:text="@string/or"
                    android:textColor="#aeaeae"
                    android:textSize="13.3sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="26.7dp"
                    android:layout_height="26.7dp"
                    android:src="@drawable/fb" />

                <ImageView
                    android:layout_width="26.7dp"
                    android:layout_height="26.7dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/instagram" />

                <ImageView
                    android:layout_width="26.7dp"
                    android:layout_height="26.7dp"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/twitter" />

                <ImageView
                    android:layout_width="26.7dp"
                    android:layout_height="26.7dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/linkedin" />

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>
</layout>